--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "demo1",
   "version": "8.0.24",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@formatjs/intl-pluralrules": "^4.0.28",
     "@formatjs/intl-relativetimeformat": "^9.1.7",
@@ -43,6 +42,7 @@
     "react-bootstrap-v5": "^1.4.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-inlinesvg": "^2.3.0",
     "react-intl": "^5.20.4",
     "react-is": "^17.0.2",
